--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 /bazel-out
 
 # dependencies
-/node_modules
+/fake-umbrella-client/node_modules
+/fake-umbrella-server/node_modules
 
 # profiling files
 chrome-profiler-events*.json
