--- a/fake-umbrella-server/package.json
+++ b/fake-umbrella-server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
-    "express": "~4.17.1"
+    "express": "~4.17.1",
+    "mongoose": "^5.9.17"
   }
 }
