Added customer model & database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build: fake-umbrella-server
     ports:
       - "3000:3000"
+    volumes:
+      - ./fake-umbrella-server:/server
     links:
       - database
 
