--- a/fake-umbrella-server/package.json
+++ b/fake-umbrella-server/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "watch": "nodemon ./server.js",
     "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
     "express": "~4.17.1",
     "mongoose": "^5.9.17"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
